--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </section>
 
   <section class="main">
+    <div class="left-cont">
+      <img src="images/Curly hair-pana1.png" alt="" class="left-side">
+    </div>
     <div class="right-cont">
       <img src="images/Curly hair-bro.png" alt="" class="right-side">
     </div>
@@ -30,10 +33,7 @@
               <button id="next" class="btn js-btn"><img src="images/right.png" alt="left arrow"></button>
           </div>
           <p id="score"></p>
-       
-          <div class="left-cont">
-            <img src="" alt="" class="left-side">
-          </div>
+
       </div>
     </div>
   </section>
