--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   </section>
 
 
-  <section class="footer-End">
+  <!-- <section class="footer-End">
     <div class="footer">
       <div class="note">copyright &copy; R's hair quiz. All right reserved</div>
     </div>
-  </section>
+  </section> -->
   <script src="app.js"></script>
 </body>
 </html>
